--- a/docs/css/toolbar.css
+++ b/docs/css/toolbar.css
@@ -1,39 +1,58 @@
-#toolbar {
-    position: fixed;
-    width: 100%;
-    height: 30px;
+.topnav {
+  overflow: hidden;
+  background-color: #000000;
+  border-style: solid;
+  border-color: white;
+  position: fixed;
+  margin: 0px;
+  padding: 0px;
+  width: 98vw;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #282828;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: #282828;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav { width: 94vw; };
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
     top: 0;
-    left: 0;
-	padding-left: 10px;
-	padding-bottom: 20px;
-    background: #212121;
-	color: white;
-	white-space: nowrap;
-}
-
-body {
-    margin-top: 35px;
-}
-
-#logo, #toolbar-content {
-	width: 48%;
-}
-
-#logo {
-	float: left;
-	text-align: left;
-}
-
-#toolbar-content {
-	float: right;
-	text-align: right;
-	padding-right: 20px;
-}
-
-.toolbar-link {
-	color: white;
-	text-decoration: none;
-	font-size: large;
-	padding-left: 5px;
-	padding-right: 5px;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav { width: 94vw; };
 }
